<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_email_for_registeration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageViewCCTVCam"
        android:layout_width="322dp"
        android:layout_height="139dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/cctv_camera_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cctv_cam" />

    <EditText
        android:id="@+id/editTextTextRegisterEmailAddress"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_user_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterEmail"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewRegisterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_your_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCCTVCam" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="324dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewRegisterUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRegisterEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPasswordRegisterUserPassword"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterUserPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPasswordRegisterConfirmRegisterPassword"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterConfirmPasword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewRegisterConfirmPasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRegisterUserPassword" />

    <ImageButton
        android:id="@+id/imageButtonRegisterNow"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/click_here_to_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRegisterConfirmRegisterPassword"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/register_now" />

</androidx.constraintlayout.widget.ConstraintLayout>