<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="383dp"
        android:layout_height="224dp"
        android:contentDescription="@string/logo_of_safecam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txtViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/enter_user_email"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/txtViewUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_user_password"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUserEmailAddress" />

    <EditText
        android:id="@+id/editTextTextUserEmailAddress"
        android:layout_width="313dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_registered_email_id"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewUserName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPasswordLogin"
        android:layout_width="313dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewUserPassword"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButtonLogin"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/click_here_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLogin"
        app:srcCompat="@drawable/login_button" />

    <TextView
        android:id="@+id/textViewClickToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/click_here_to_register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>